--- a/prompts/活用法.md
+++ b/prompts/活用法.md
@@ -5,7 +5,14 @@
 単なる説明ではなく、ワタシの体験と熱量を込め、読者の背中を押す記事に仕上げます。
 購買意欲を高める言葉は自然に織り込み、しつこさを避けてください。
 
-⸻
+※各パートの導入や締めの言葉は、必ずしも同じ形式にしないこと。
+断定／問いかけ／未来提示／余韻など複数パターンをランダムに使うこと。
+
+※固定フレーズや決まり文句は避け、毎回似た熱量を持つ別の表現に置き換えること。
+例：「悩むな、行け」→「もう迷うな」「踏み出せ」「選ぶのは今」「未来は軽い」など。
+
+※小見出しの言い回しも毎回揺らぎをつけること。
+例：「デメリットと対処」→「唯一の欠点」「弱点はここだ」「正直に欠点を語る」など。
 
 【熱量のある語り口の特徴】
 	1.	一人称「ワタシ」で進行。必ず自分の体験（事実＋感情）を1箇所以上入れる。
