--- a/prompts/活用法.md
+++ b/prompts/活用法.md
@@ -18,12 +18,10 @@
 	1.	一人称「ワタシ」で進行。必ず自分の体験（事実＋感情）を1箇所以上入れる。
 	2.	堀江貴文的だがマイルドな断定スタイル。
 	•	「これでいい」「結局ここに落ち着く」「遠回りするな」など。
-	•	強い断定フレーズ（例：「悩むな、行け」）は記事全体で最大2回まで。必ず最後の結論パートに1つ入れる。最後の結論パートは、特定の決まり文句を繰り返さず、毎回ニュアンスを変えて「気持ちの高まり」や「決断の感情」を表現する。例に挙げた「悩むな、行け」などはそのまま使わず、同じ熱量を持った別の表現に置き換えること。
-	•	本文では控えめに、結論で強めにする。
+	•	最後の結論パートは、特定の決まり文句を繰り返さず、毎回ニュアンスを変えて「気持ちの高まり」や「決断の感情」を表現する。
 	3.	読者との掛け合いを入れる（問いかけ→同意→否定のリズムを最低1回）。
 	4.	発見や気づきのストーリーを必ず盛り込む（読者と一緒に「腑に落ちる」流れを作る）。
 	5.	購買意欲を刺激するワードを自然に混ぜる。
-	•	「所有欲を満たす」「デキる人感」「手軽さは正義」「使っている自分を想像してほしい」など。
 	6.	リズム感と口語表現を重視。
 	•	「〜じゃないか」「いや、そうじゃない」「これがヤバい」などテンポよく。
 	•	改行を適度に入れて読みやすく。
@@ -34,12 +32,9 @@
 ・導入部分は毎回同じパターンにしないこと。
   - 体験談から始める／意外な事実から始める／問いかけから始める／世の中の流れから始める／ユーモアを交える など、切り出し方に揺らぎを持たせる。
 ・結論部分も毎回同じフレーズで締めないこと。
-  - 「悩むな、行け」など特定のフレーズを乱用せず、読後に余韻が残るような断定や提案、未来のイメージなどバリエーションをつける。
 ・記事全体として「人が実際に書いたような揺らぎ」を意識し、言葉や文のリズムを少しずつ変えること。
-章立て構成（見出し＋本文）は必ず保持すること。ただし、各章の冒頭文や締め文の言い回しはランダム性や揺らぎを持たせ、人が毎回違う文章を書くように変化させること。構成は固定、文言は変化させる。
+（見出し＋本文）は必ず保持すること。ただし、各章の冒頭文や締め文の言い回しはランダム性や揺らぎを持たせ、人が毎回違う文章を書くように変化させること。構成は固定、文言は変化させる。
 
-
-⸻
 
 【記事構成テンプレ】
 
@@ -67,17 +62,13 @@
 
 活用法（ユースケース）
 	•	最低3つの具体ユースケースを小見出し（###）で提示。
-	•	各ユースケースに「1日の流れでどう使うか」を箇条書きで入れる。
 
 まとめと背中押し 150〜250字
 	•	選択肢をシンプルに提示（どちらか選ぶ／両方買う）。
-	•	最後に断定的で心に響く一言で締める（例：「結局ここに行き着く。迷うな。」）。
 
-⸻
 
 【活用法オーバーレイ】
-	•	最低3つの具体ユースケース（例：読書／会議メモ／動画編集の下書き）を小見出し（###）で提示。
-	•	各ユースケースに「1日の流れでどう使うか」を箇条書きで入れる。
+	•	最低3つの具体ユースケースを小見出し（###）で提示。
 	•	数字（重量／価格／バッテリー目安等）を1セクションに1つ以上含める。
 
 ⸻
