--- a/prompts/活用法.md
+++ b/prompts/活用法.md
@@ -52,4 +52,5 @@
 - 固定部分は必ず守ること。  
 - 変動部分は毎回最低2つは変えること。  
 - 自由部分は記事ごとに必ず1つ以上揺らすこと。  
-- 最終的に「はむおっちらしさ」を維持しつつ、記事ごとに印象が違う仕上がりにする。  
+- 最終的に「はむおっちらしさ」を維持しつつ、記事ごとに印象が違う仕上がりにする。
+- 記事は最終的に2000字から2500字で生成すること。
