--- a/prompts/活用法.md
+++ b/prompts/活用法.md
@@ -10,14 +10,15 @@
 ・トーンは「堀江貴文マイルド＋熱量のある語り口」。
 　- 強めで断定的。「〜で十分すぎる」「迷うな、行け」「正解はこっち」など。
 　- ただし過激すぎず、共感と信頼感を保つ。
-・購買意欲を刺激する表現を随所に入れる（「所有欲」「デキる人感」「使っている自分を想像してほしい」など）。
+・購買意欲を刺激する表現を随所に入れる（「所有欲」「使っている自分を想像してほしい」などテーマに合わせて生成）。
 
 ━━━━━━━━━━━━━
 【構成と小見出し：完全ランダム生成】
 ━━━━━━━━━━━━━
-以下の小見出しテンプレートから、**3〜5個をランダムに選んで構成**してください。  
+以下の小見出しテンプレートから、テーマにある程度合わせて**3〜5個をランダムに選んで構成**してください。  
 順番や組み合わせは自由です。  
 同じテンプレートを繰り返しても構いませんが、必ず順番・展開を変えること。
+そして、自然な流れになるように文章生成してください。
 
 ①【衝動／体験型】
 - 「買ってしまったけど、後悔していない」
@@ -53,13 +54,13 @@
 【展開の揺らぎルール】
 ━━━━━━━━━━━━━
 ・小見出し間の文量・トーンを変える（短くまとめる／長めに語る）。
-・導入は毎回ランダムに変える：
-　- 衝動買い型（「気づけばカートに入れていた」）
-	- 不満スタート型（「正直、最初はイマイチだった」）
-	- 冷静比較型（「新旧を冷静に比べてみた」）
-	- 感動スタート型（「触れた瞬間、すべてが変わった」）
-・比喩や例え話は毎回変える（本／旅／料理／スポーツなど何でも可）。
-・結論部分は「賢さ」「熱量」「ミニマル」「未来志向」のいずれかを主軸にする（AIが自動選択）。
+・導入は毎回テーマに合わせてランダムに変える：
+　- 衝動買い型
+	- 不満スタート型
+	- 冷静比較型
+	- 感動スタート型
+・比喩や例え話は毎回変える。
+・結論部分は「熱量」を主軸にする。
 
 ━━━━━━━━━━━━━
 【出力の最終条件】
